# boost-shared-memory-wrapper

./: CMakeLists.txt  README.md  SharedMemoryConfig.cmake.in
.github/workflow/: windows.yml
.github/workflows/: cross-platform-build.yml  ubuntu-build.yml  windows-build.yml  windows.yml
cmake/: SharedMemoryConfig.cmake.in
example/: CMakeLists.txt  receiver.cpp
include/: CMakeLists.txt  sharedmemory.hpp
test/: CMakeLists.txt  receiver.cpp  shared_memory_test.cpp  transmitter.cpp
